--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -28,7 +28,7 @@
             <div class="col-sm-8 title">
                 <button id="test">Shadow</button> 
                 <button id="test2">Sfullscreen</button> 
-                <h1>HelloWorld</h1>
+                <h1 id="projecttitle">HelloWorld</h1>
             </div>
             <div class="col-sm-2 title">
                 <div class="row title" id="lefticon">
@@ -56,6 +56,7 @@
     </div>
     <div id="Add-panel" class="bubble_left">
         <div id="Addmark"><p>Add New Element</p></div>
+        <div id="Addmenu"></div>
     </div>
     <div id="setting-panel" class="bubble_top">
     </div>
