--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -227,6 +227,15 @@
     </div>
     <div id="preview-panel">
     </div>
+    <div id="preview-control" style="background: url('img/icons/cancel.png') 
+                                     no-repeat center center transparent; background-size: 100% auto;">
+    </div>
+    <div id="propertyPanel">
+        <div id="Addmark"><p>Property</p></div>
+        <p>Id</p>
+        <p>Content</p>
+        <p></p>
+    </div>
     <script src="js/underscore-min.js"></script>
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/index.js"></script>
