--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -10,15 +10,12 @@
     <link rel="stylesheet" type="text/css" href="css/typicons.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
-     <link rel="stylesheet" type="text/css" href="css/github.css">
+    <link rel="stylesheet" type="text/css" href="css/github.css">
     
-<<<<<<< Updated upstream
-=======
     <script src="js/jquery-1.11.1.min.js"></script>
     <script src="js/test.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.transit.min.js"></script>
->>>>>>> Stashed changes
 </head>
 <body id="test1">
     <div id="header" >
@@ -231,7 +228,7 @@
                                      no-repeat center center transparent; background-size: 100% auto;">
     </div>
     <div id="propertyPanel">
-        <div id="Addmark"><p>Property</p></div>
+        <div ><p>Property</p></div>
         <p>Id</p>
         <p>Content</p>
         <p></p>
