--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <title>Computer World</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.css" />
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/typicons.min.css"/>
@@ -209,7 +208,7 @@
                         <div class="container-fluid">
                             <div class="navbar-header">
                                 <a class="navbar-brand" href="#">
-                                    <img alt="Brand" src="...">
+                                    <img alt="Brand" >
                                 </a>
                             </div>
                         </div>
@@ -226,12 +225,6 @@
     </div>
     <div id="preview-control" style="background: url('img/icons/cancel.png') 
                                      no-repeat center center transparent; background-size: 100% auto;">
-    </div>
-    <div id="propertyPanel">
-        <div ><p>Property</p></div>
-        <p>Id</p>
-        <p>Content</p>
-        <p></p>
     </div>
     <script src="js/underscore-min.js"></script>
     <script src="js/jquery-1.11.1.min.js"></script>
