--- a/app/src/main/assets/tool/tool.html
+++ b/app/src/main/assets/tool/tool.html
@@ -218,12 +218,13 @@
         </div>
     </div>
     <div id="galleryPanel">
+        <div id="Addmark"><p>Gallery</p></div>
         <div class="content">
         <div id="galleria">
-            <a href="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Biandintz_eta_zaldiak_-_modified2.jpg/800px-Biandintz_eta_zaldiak_-_modified2.jpg">
+            <a href="image.jpg">
                 <img 
-                    src="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Biandintz_eta_zaldiak_-_modified2.jpg/100px-Biandintz_eta_zaldiak_-_modified2.jpg",
-                    data-big="http://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Biandintz_eta_zaldiak_-_modified2.jpg/1280px-Biandintz_eta_zaldiak_-_modified2.jpg"
+                    src="image.jpg",
+                    data-big="image.jpg"
                     data-title="Biandintz eta zaldiak"
                     data-description="Horses on Bianditz mountain, in Navarre, Spain."
                 >
@@ -234,10 +235,7 @@
     <script>
 
     // Load the classic theme
-    Galleria.loadTheme('tool/gallery/galleria.classic.min.js');
-
-    // Initialize Galleria
-    Galleria.run('#galleria');
+   
 
     </script>
     </div>
