--- a/app/src/main/assets/tool/tool.html
+++ b/app/src/main/assets/tool/tool.html
@@ -12,7 +12,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.js"></script>
 
         <!-- load Galleria -->
-        <script src="tool/gallery/galleria-1.4.2.min.js"></script>
+        
 </head>
 <body id="test1">
     <div id="header" >
@@ -218,7 +218,7 @@
         </div>
     </div>
     <div id="galleryPanel">
-        <div id="Addmark"><p>Gallery</p></div>
+        <div id="galleryMark"><p>Gallery</p></div>
         <div class="content">
         <div id="galleria">
             <a href="image.jpg">
@@ -242,7 +242,7 @@
     <div id="setting-panel" class="bubble_top">
     </div>
     <div id="propertyPanel" class="draggable">
-        <div id="Addmark"></div>
+        <div id="galleryMark"></div>
         <div class="CSSTableGenerator container" >
                 <table>
                     <tr><td>Property</td><td>Content</td></tr>
@@ -264,7 +264,7 @@
     </div>
     <script src="tool/js/underscore-min.js"></script>
     <script src="tool/js/jquery-1.11.1.min.js"></script>
-    
+    <script src="tool/gallery/galleria-1.4.2.min.js"></script>
     <script src="tool/js/index.js"></script>
     <script src="tool/js/bootstrap.min.js"></script>
     <script src="tool/js/jquery.transit.min.js"></script>
