--- a/app/src/main/assets/www/www/index.html
+++ b/app/src/main/assets/www/www/index.html
@@ -4,66 +4,66 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Mobsite</title>
-    <link rel="stylesheet" href="framework.css">
+    <link rel="stylesheet" href="tool/css/framework.css">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 </head>
 
 <body id="innerContent">
-<div id="myGestureListener">
+<div id="myGestureListener" data-not-selectable="true">
     <span id="gestureStatus"></span> : (<span id="x"></span>,<span id="y"></span>)
 </div>
-<div class="container-fluid">
-    <div id="slide0" class="selectable row">
-        <div class="selectable column col-md-12">
+<div class="container-fluid" data-not-selectable="true">
+    <div id="slide0" class="row">
+        <div class="column col-md-12">
             <h1>Canvas Pad</h1>
         </div>
     </div>
-    <div id="slide1" class="selectable row slide">
-        <div class="column selectable col-md-5">
+    <div id="slide1" class="row slide">
+        <div class="column col-md-5">
             <h2>Beautifully designed,<br/> gracefully used.</h2>
         </div>
-        <div class="column selectable col-md-7">
+        <div class="column col-md-7">
             <img src="image/01.jpg"/>
         </div>
     </div>
-    <div id="slide2" class="selectable row slide">
-        <div class="column selectable col-md-7">
+    <div id="slide2" class="row slide">
+        <div class="column col-md-7">
             <img src="image/02.jpg"/>
         </div>
-        <div class="column selectable col-md-5">
+        <div class="column col-md-5">
             <h2>Finger-Oriented.</h2>
 
             <p>為了讓使用者感受到最方便的操作方式
                 <br/>我們使用了最接近直覺的觸控手勢來操作網頁上的各個元件。</p>
         </div>
     </div>
-    <div class="selectable row slide">
-        <div class="column selectable col-md-12">
+    <div class="row slide">
+        <div class="column col-md-12">
             <h2>Canvas Pad is for</h2>
 
-            <div class="selectable row">
-                <div class="column selectable col-md-4">
-                    <h3 class="selectable">Designer</h3>
-                    <img class="selectable" src="image/03.jpg" style="width:100%"/>
+            <div class="row">
+                <div class="column col-md-4">
+                    <h3>Designer</h3>
+                    <img src="image/03.jpg" style="width:100%"/>
                 </div>
-                <div class="column selectable col-md-4">
-                    <h3 class="selectable">Programmer</h3>
-                    <img class="selectable" src="image/04.jpg" style="width:100%"/>
+                <div class="column col-md-4">
+                    <h3>Programmer</h3>
+                    <img src="image/04.jpg" style="width:100%"/>
                 </div>
-                <div class="column selectable col-md-4">
-                    <h3 class="selectable">UX Designer</h3>
-                    <img class="selectable" src="image/05.jpg" style="width:100%"/>
+                <div class="column col-md-4">
+                    <h3>UX Designer</h3>
+                    <img src="image/05.jpg" style="width:100%"/>
                 </div>
             </div>
         </div>
     </div>
-    <div class="selectable row slide">
-        <h2 class="selectable">For more information, check the links below</h2>
+    <div class="row slide">
+        <h2>For more information, check the links below</h2>
     </div>
-    <div class="selectable row slide">
-        <p style="text-align:right;"><a href="test.html">NMLab Group 1.
-            <br/>All rights reserved.</a></p>
+    <div class="row slide">
+        <p style="text-align:right;">NMLab Group 1.
+            <br/>All rights reserved.</p>
     </div>
 </div>
 
@@ -78,11 +78,6 @@
 <script type="text/javascript" src="tool/js/manager.js"></script>
 <script type="text/javascript" src="tool/js/managerSelect.js"></script>
 <script>
-    var selectableObjects = document.querySelectorAll(".selectable");
-    for(var i = 0; i<selectableObjects.length;++i){
-        selectableObjects[i].selectable = true;
-    }
-
     manager.init();
 </script>
 </body>
