--- a/app/src/main/assets/tool/tool.html
+++ b/app/src/main/assets/tool/tool.html
@@ -246,7 +246,7 @@
         <div class="CSSTableGenerator container" >
                 <table>
                     <tr><td>Property</td><td>Content</td></tr>
-                    <tr><td>Category</td><td id="properHeight"></td></tr>
+                    <tr><td>Category</td><td id="properCategory"></td></tr>
                     <tr><td>Content</td><td id="properContent"></td></tr>
                     <tr><td>Rect - Height</td><td id="properHeight"></td></tr>
                     <tr><td>Rect - Width</td><td id="properWidth"></td></tr>
@@ -254,6 +254,7 @@
                     <tr><td>Background</td><td id="properBackgound"></td></tr>
                     <tr><td>Opacity</td><td id="properOpacity"></td></tr>
                     <tr><td>Padding</td><td id="properPadding"></td></tr>
+                    <tr><td>Source</td><td id="properSource"></td></tr>
                 </table>
         </div>      
     </div>
