--- a/app/src/main/assets/project/tool.html
+++ b/app/src/main/assets/project/tool.html
@@ -242,10 +242,10 @@
     <div id="setting-panel" class="bubble_top">
     </div>
     <div id="propertyPanel" class="draggable">
-        <div id="galleryMark"></div>
+        <div id="galleryMark">Property</div>
         <div class="CSSTableGenerator container" >
                 <table>
-                    <tr><td>Property</td><td>Content</td></tr>
+                    
                     <tr><td>Category</td><td id="properCategory"></td></tr>
                     <tr><td>Content</td><td id="properContent"></td></tr>
                     <tr><td>Rect - Height</td><td id="properHeight"></td></tr>
