--- a/app/src/main/assets/www/www/index.html
+++ b/app/src/main/assets/www/www/index.html
@@ -77,6 +77,7 @@
 <!-- Include manager and its package-->
 <script type="text/javascript" src="tool/js/manager.js"></script>
 <script type="text/javascript" src="tool/js/managerSelect.js"></script>
+<script type="text/javascript" src="tool/js/managerDrag.js"></script>
 <script>
     manager.init();
 </script>
