--- a/app/src/main/assets/tool/tool.html
+++ b/app/src/main/assets/tool/tool.html
@@ -224,7 +224,7 @@
         <div id="galleria">
             <a href="image.jpg">
                 <img 
-                    src="image.jpg",
+                    src="image.jpg"
                     data-big="image.jpg"
                     data-title="Biandintz eta zaldiak"
                     data-description="Horses on Bianditz mountain, in Navarre, Spain."
@@ -234,7 +234,7 @@
     </div>
     </div>
     <div id="colorPickerPanel">
-        <form><input type="text" id="color" name="color" value="#123456"/>/form>
+        <form><input type="text" id="color" name="color" value="#123456"/></form>
             <div id="picker">
                     <div class="farbtastic">
                         <div class="color" style="background-color: rgb(0, 127, 255);"></div>
@@ -242,11 +242,10 @@
                         <div class="h-marker marker" style="left: 55px; top: 170px;"></div>
                         <div class="sl-marker marker" style="left: 91px; top: 73px;"></div></div></div>
     </div>
-    </div>
     <div id="setting-panel" class="bubble_top">
     </div>
     <div id="propertyPanel" class="draggable">
-        <div id="galleryMark"><p>Property</p></div>
+        <div id="propertyMark"><p>Property</p></div>
         <div class="CSSTableGenerator container" >
                 <table>
                     
