--- a/app/src/main/assets/tool/tool.html
+++ b/app/src/main/assets/tool/tool.html
@@ -139,7 +139,7 @@
     </div>
     <div id="Add-panel" class="bubble_left container">
         <div class="panelMark"><p>Add New Element</p></div>
-        <div id="Addmenu">
+        <div id="Addmenu" class="trapScroll">
             <div class="col-xs-6 element" id="Title"><div class="item"><h1>Input Title</h1></div></div>
             <div class="col-xs-6 element" id="Text"><div class="item"><p>Input Text</p></div></div>
             <div class="col-xs-6 element" id="Container1" style="background: url('tool/img/icons/container1.png')
@@ -250,7 +250,7 @@
     <div id="propertyPanel" class="draggable">
         <div class="panelMark"><p>Property</p></div>
         <div class="CSSTableGenerator container" >
-                <table>
+                <table id="properTable" class="trapScroll child">
                     
                     <tr><td>Category</td><td id="properCategory"></td></tr>
                     <tr><td>Content</td><td id="properContent"></td></tr>
