--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -251,7 +251,7 @@
         <div class="panelMark"><p>Property</p></div>
         <div class="CSSTableGenerator container" >
                 <table id="properTable" class="trapScroll child">
-                    
+                 <tbody id="scroller">
                     <tr><td>Category</td><td id="properCategory"></td></tr>
                     <tr><td>Content</td><td id="properContent"></td></tr>
                     <tr><td>Rect - Height</td><td id="properHeight"></td></tr>
@@ -269,6 +269,7 @@
 
                     <tr><td>Padding</td><td id="properPadding"></td></tr>
                     <tr><td>Source</td><td id="properSource"></td></tr>
+                  </tbody>
                 </table>
         </div>      
     </div>
