--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -140,8 +140,10 @@
     <div id="Add-panel" class="bubble_left container">
         <div class="panelMark"><p>Add New Element</p></div>
         <div id="Addmenu" class="trapScroll">
-            <div class="col-xs-6 element" id="Title"><div class="item"><h1>Input Title</h1></div></div>
-            <div class="col-xs-6 element" id="Text"><div class="item"><p>Input Text</p></div></div>
+            <div class="col-xs-6 element" id="Title"      style="background: url('tool/img/icons/title.png')
+                                                                 no-repeat center center transparent; background-size: 100% auto;"><div class="item"></div></div>
+            <div class="col-xs-6 element" id="Text"       style="background: url('tool/img/icons/text.png')
+                                                                 no-repeat center center transparent; background-size: 100% auto;"><div class="item"></div></div>
             <div class="col-xs-6 element" id="Container1" style="background: url('tool/img/icons/container1.png')
                                                                  no-repeat center center transparent; background-size: 100% auto;">
                 <div class="item container">
