--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -140,10 +140,16 @@
     <div id="Add-panel" class="bubble_left container">
         <div class="panelMark"><p>Add New Element</p></div>
         <div id="Addmenu" class="trapScroll">
+            <div class="elementCat" id="cat1"><p>Text</p></div>
+        <div class="addContainer container">
             <div class="col-xs-6 element" id="Title"      style="background: url('tool/img/icons/title.png')
-                                                                 no-repeat center center transparent; background-size: 100% auto;"></div>
+                                                                 no-repeat center center transparent; background-size: 100% auto;">                 
+            </div>
             <div class="col-xs-6 element" id="Text"       style="background: url('tool/img/icons/text.png')
-                                                                 no-repeat center center transparent; background-size: 100% auto;"></div>
+                                                                 no-repeat center center transparent; background-size: 100% auto;">                 </div>
+        </div>
+            <div class=" elementCat" id="cat1"><p>Container</p></div>
+        <div class="addContainer container">
             <div class="col-xs-6 element" id="Container1" style="background: url('tool/img/icons/container1.png')
                                                                  no-repeat center center transparent; background-size: 100% auto;">
 
@@ -164,32 +170,21 @@
                                                                  no-repeat center center transparent; background-size: 100% auto;">
 
             </div>
+        </div>
+            <div class=" elementCat" id="cat1"><p>Picture</p></div>
+        <div class="addContainer container">
             <div class="col-xs-6 element" id="Picture" style="background: url('tool/img/icons/picture.png')
-                                                              no-repeat center center transparent; background-size: 100% auto;">
-
-            </div>
-            <div class="col-xs-6 element" id="HyperLink" style="background: url('tool/img/icons/link.png')
-                                                                no-repeat center center transparent; background-size: 100% auto;">
-            </div>
+                                                              no-repeat center center transparent; background-size: 100% auto;"></div>
             <div class="col-xs-6 element" id="Icon" style="background: url('tool/img/icons/icon.png')
                                                            no-repeat center center transparent; background-size: 100% auto;"></div>
-
+        </div>
+            <div class=" elementCat" id="cat1"><p>Others</p></div>
+        <div class="addContainer container">
+            <div class="col-xs-6 element" id="HyperLink" style="background: url('tool/img/icons/link.png')
+                                                                no-repeat center center transparent; background-size: 100% auto;"></div>
             <div class="col-xs-6 element" id="InputBox" style="background: url('tool/img/icons/inputbox.png')
                                                                no-repeat center center transparent; background-size: 100% auto;"></div>
-            <div class="col-xs-6 element" id="NavBar"></div>
-            <div class="col-xs-6 element" id="Footer">
-                <div class="item">
-                    <nav class="navbar navbar-default">
-                        <div class="container-fluid">
-                            <div class="navbar-header">
-                                <a class="navbar-brand" href="#">
-                                    <img alt="Brand" >
-                                </a>
-                            </div>
-                        </div>
-                    </nav>
-                </div>
-            </div>
+        </div>
 
 
         </div>
