--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -239,8 +239,7 @@
                     </td></tr>
                    
 
-                    <tr><td>Padding</td><td id="properPadding"></td></tr>
-                    <tr><td>Source</td><td id="properSource"></td></tr>
+                    <tr><td>Margin</td><td id="properMargin"></td></tr>
                   </tbody>
                 </table>
         </div>      
