--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -266,7 +266,8 @@
     <script type="text/javascript" src="tool/js/manager.js"></script>
     <script type="text/javascript" src="tool/js/managerSelect.js"></script>
     <script type="text/javascript" src="tool/js/managerDrag.js"></script>
-    
+    <script type="text/javascript" src="tool/js/managerProperty.js"></script>
+    <script type="text/javascript" src="tool/js/managerRecord.js"></script>
     <script>
 
     </script>
