magagerDrag update gesture send target element to manager

--- a/app/src/main/assets/platforms/android/assets/www/tool.html
+++ b/app/src/main/assets/platforms/android/assets/www/tool.html
@@ -239,8 +239,7 @@
                     </td></tr>
                    
 
-                    <tr><td>Padding</td><td id="properPadding"></td></tr>
-                    <tr><td>Source</td><td id="properSource"></td></tr>
+                    <tr><td>Margin</td><td id="properMargin"></td></tr>
                   </tbody>
                 </table>
         </div>      
@@ -268,7 +267,8 @@
     <script type="text/javascript" src="tool/js/managerSelect.js"></script>
     <script type="text/javascript" src="tool/js/managerDrag.js"></script>
     <script type="text/javascript" src="tool/js/managerProperty.js"></script>
-    
+    <script type="text/javascript" src="tool/js/managerRecord.js"></script>
+
     <script>
 
     </script>
