--- a/app/src/main/assets/platforms/android/assets/www/dummy.html
+++ b/app/src/main/assets/platforms/android/assets/www/dummy.html
@@ -26,7 +26,9 @@
    <script type="text/javascript" src="tool/js/manager.js"></script>
    <script type="text/javascript" src="tool/js/managerSelect.js"></script>
    <script type="text/javascript" src="tool/js/managerDrag.js"></script>
-   
+   <script type="text/javascript" src="tool/js/managerProperty.js"></script>
+   <script type="text/javascript" src="tool/js/managerRecord.js"></script>
+
    <script>
       
       
