--- a/app/src/main/assets/platforms/android/assets/www/tool.html
+++ b/app/src/main/assets/platforms/android/assets/www/tool.html
@@ -253,11 +253,13 @@
     <script src="tool/js/jquery-1.11.1.min.js"></script>
     <script src="tool/gallery/galleria-1.4.2.min.js"></script>
     <script src="tool/js/farbtastic.js"></script>
+    <script src="tool/js/editor.js"></script>
     <script src="tool/js/index.js"></script>
     <script src="tool/js/bootstrap.min.js"></script>
     <script src="tool/js/jquery.transit.min.js"></script>
     <script src="tool/js/github.js"></script>
     <script src="tool/js/main.js"></script>
+    <script src="tool/js/html2canvas.js"></script>
     
     <!-- Include gesture -->
     <script type="text/javascript" src="tool/js/gesture.js"></script>
