--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -216,6 +216,8 @@
         </div>
         <div type="text" id="color" name="color" value="#123456"></div>
         <div type="text" id="previouscolor" name="prevcolor" value="#000000"></div>
+        <div id="colorCheck " class="colorBtn col-xs-6" ><p>OK</p></div>
+        <div id="colorCancel" class="colorBtn col-xs-6" ><p>Cancel</p></div>
     </div>
     <div id="setting-panel" class="bubble_top">
     </div>
