--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -208,10 +208,9 @@
         <div class="panelMark"><p>Color</p> </div>    
         <div id="picker">
             <div class="farbtastic">
-                <div class="color" style="background-color: rgb(0, 127, 255);"></div>
-                <div class="wheel"></div><div class="overlay"></div>
+                <div class="wheel"></div>
                 <div class="h-marker marker" style="left: 55px; top: 170px;"></div>
-                <div class="sl-marker marker" style="left: 91px; top: 73px;"></div>
+                <div class="sl-marker marker2" style="left: 91px; top: 73px;"></div>
             </div>
         </div>
         <div type="text" id="color" name="color" value="#123456"></div>
