--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -256,7 +256,7 @@
                     <tr class="pAll" ><td>Opacity       </td><td id="properOpacity"> 
                         <div class="slider">
                             <output id="rangevalue">1</output>
-                            <input id="opacitySlider" value="1" type = "range" min="0" max="10" onchange="rangevalue.value=value/10"/>
+                            <input id="opacitySlider" type = "range" min="0" max="100" />
                         </div>
                     </td></tr>
                     <tr class="pAll" ><td>Margin        </td><td id="properMargin"></td></tr>
