--- a/app/src/main/assets/www/tool.html
+++ b/app/src/main/assets/www/tool.html
@@ -240,7 +240,7 @@
                     <tr class="pText"><td>Text - Align  </td><td id="properTextAlign">
                         <form method="post" action="demoform.asp">
                             <fieldset class="ui-field-contain">
-                                <label for="day"></label>
+                                <label></label>
                                 <select onchange="editor.textAlignChange()" onmousedown="this.value='';"  name="day" id="textAlign">
                                         <option value="start">Start</option>
                                         <option value="left">Left</option>
