magagerDrag update gesture send target element to manager

--- a/app/src/main/assets/www/index.html
+++ b/app/src/main/assets/www/index.html
@@ -21,12 +21,12 @@
             <h2>Beautifully designed,<br/> gracefully used.</h2>
         </div>
         <div class="col-md-7">
-            <img src="image/01.jpg"/>
+            <img style="width:100%" src="image/01.jpg"/>
         </div>
     </div>
     <div id="slide2" class="row">
         <div class="col-md-7">
-            <img src="image/02.jpg"/>
+            <img style="width:100%" src="image/02.jpg"/>
         </div>
         <div class="col-md-5">
             <h2>Finger-Oriented.</h2>
@@ -63,6 +63,11 @@
             <br/>All rights reserved.</p>
     </div>
 </div>
+<style>
+    #innerContent img {
+        width: 100%;
+    }
+</style>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
